Fri Jan 23 20:00:59 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_object, marshal_dump): use indetity tables for
	  arbitrary VALUE keys, because of performance of FLONUM.
	  [Bug #10761]

	* marshal.c (obj_alloc_by_klass, marshal_load): ditto.

Fri Jan 23 17:12:33 2015  Eric Wong  <e@80x24.org>

	* benchmark/bm_marshal_dump_flo.rb: new benchmark for [Bug #10761]

Thu Jan 22 18:03:19 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb (find_svn_log): use double quotes instead
	  of single quotes because cmd.exe doesn't handle them.

	* tool/redmine-backporter.rb (done): the 2nd element of matched data
	  is the offset of the end of matched string, not length.

Thu Jan 22 16:45:24 2015  Eric Wong  <e@80x24.org>

	* st.c (st_numhash): mix float value for flonum
	* hash.c (rb_any_hash): ditto
	* benchmark/bm_hash_aref_flo.rb: new benchmark
	* benchmark/bm_hash_ident_flo.rb: ditto
	  [Bug #10761]

Wed Jan 21 22:33:51 2015  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el: Import version 2.2.1 from
	  https://github.com/knu/ruby-electric.el.  Improve compatibility
	  with and optimize for Emacs 24.4.

Wed Jan 21 09:40:52 2015  Zachary Scott  <e@zzak.io>

	* file.c: Document other cases of missing birthtime on OS with patch
	  provided by @sho-h similar to GH-817. [ci skip] [DOC]

Wed Jan 21 09:09:19 2015  Tanaka Akira  <akr@fsij.org>

	* NEWS: References to tickets added.
	  [ruby-core:67701] [Bug #10760] Suggested by Zachary Scott.

Tue Jan 20 22:59:54 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/vcs.rb: fix the exception given remote-url of svn.

Tue Jan 20 12:58:33 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: now can change the page of `ls`.

Tue Jan 20 12:28:37 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb (readline): fallback to normal gets on
	  Windows because IO.console.getch is not always do as expected.
